# libvmod-geoip2

./: .envrc  .gitignore  .gitmodules  .travis.yml  CHANGES.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  ops  version
.github/workflows/: ci-devel.yml  ci-main.yml  ci.yml
debian/: changelog  control  rules
src/: Makefile.am  vmod.vcc  vmod_geoip2.c  vmod_geoip2.vcc  ws_ext.c  ws_ext.h
src/tests/: b00000.vtc  b00001.vtc  b00002.vtc  b00003.vtc  b00004.vtc  b00005.vtc  b00010.vtc  b00012.vtc  b00013.vtc  libvmod-geoip2.mmdb  mmdb-writer.go  test-data.csv  test-db-writer.pl
src/tests/extra/: b00004.vtc
src/tests/vrt/: b00004.vtc
